--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,82 @@
 body{
     margin: 0;
     padding: 0;
+    padding-top: 65px;
 }
-#navbar{
-    background: red;
+a{
+    color: #333;
+}
+ul{
+    list-style: none;
+    padding: 0;
+}
+.my-top-navbar{
+    background: #000;
+}
+.my-top-navbar a{
+    color: #fff !important;
+}
+.my-top-navbar #my-con>ul>li>a:hover{
+    color: #000 !important;
+}
+.my-active>a{
+    background: #fff;
+    color: #000 !important;
+}
+.my-main-left #carousel-example-generic img{
+    width: 100%;
+    height: 300px;
+}
+.my-main-left .my-carousel-trans{
+    background: rgba(190,186,244,0.5);
+    width: 100%;
+    margin-left: -20%;
+    height: 80px;
+    top: 50%;
+    /*display: none;*/
+}
+.my-main-right .my-panel-ul{
+    list-style: none;
+    line-height: 30px;
+    text-indent: 2em;
+}
+.my-con-left{
+    border-right: 2px solid #000;
+    box-sizing: border-box;
+    margin-top: 20px;
+    padding-top: 20px;
+}
+.my-con-left .my-con-panel1{
+    line-height: 25px;
+}
+.my-circle-caret{
+    margin-top: 30px;
+    position: relative;
+}
+.my-caret{
+    width: 0px;
+    height: 0;
+    border: 13px solid ;
+    border-bottom: 13px solid transparent;
+    border-right: 13px solid transparent;
+
+}
+.my-circle{
+    position: absolute;
+    top: -3px;
+    left: 7.75%;
+    background: #000;
+    border: 1px solid;
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+}
+.my-con-right{
+    margin-top: 20px;
+    padding-top: 20px;
+    line-height: 25px;
+}
+.my-con-right ul li{
+    padding-top: 10px;
+    font-size: 12px;
 }
