--- a/css/global.css
+++ b/css/global.css
@@ -17,6 +17,7 @@ ul{
     color: #fff !important;
 }
 .my-top-navbar #my-con>ul>li>a:hover{
+    background: #fff;
     color: #000 !important;
 }
 .my-active>a{
@@ -25,7 +26,7 @@ ul{
 }
 .my-main-left #carousel-example-generic img{
     width: 100%;
-    height: 300px;
+    height: 250px;
 }
 .my-main-left .my-carousel-trans{
     background: rgba(190,186,244,0.5);
@@ -38,7 +39,6 @@ ul{
 .my-main-right .my-panel-ul{
     list-style: none;
     line-height: 30px;
-    text-indent: 2em;
 }
 .my-con-left{
     border-right: 2px solid #000;
@@ -50,21 +50,21 @@ ul{
     line-height: 25px;
 }
 .my-circle-caret{
-    margin-top: 30px;
+    padding-top: 30px;
     position: relative;
 }
-.my-caret{
-    width: 0px;
+.my-circle-caret .my-caret{
+    width: 0;
     height: 0;
     border: 13px solid ;
     border-bottom: 13px solid transparent;
     border-right: 13px solid transparent;
 
 }
-.my-circle{
+.my-circle-caret .my-circle{
     position: absolute;
-    top: -3px;
-    left: 7.75%;
+    top: 27px;
+    right: -5px;
     background: #000;
     border: 1px solid;
     border-radius: 50%;
