--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 0;
     padding-top: 65px;
+    background: #000;
 }
 a{
     color: #333;
@@ -15,68 +16,19 @@ ul{
 }
 .my-top-navbar a{
     color: #fff !important;
+    -webkit-transition: 1s;
+       -moz-transition: 1s;
+        -ms-transition: 1s;
+         -o-transition: 1s;
+            transition: 1s;
 }
 .my-top-navbar #my-con>ul>li>a:hover{
     background: #fff;
     color: #000 !important;
+    font-size: 16px;
 }
 .my-active>a{
+    font-size: 16px;
     background: #fff;
     color: #000 !important;
-}
-.my-main-left #carousel-example-generic img{
-    width: 100%;
-    height: 250px;
-}
-.my-main-left .my-carousel-trans{
-    background: rgba(190,186,244,0.5);
-    width: 100%;
-    margin-left: -20%;
-    height: 80px;
-    top: 50%;
-    /*display: none;*/
-}
-.my-main-right .my-panel-ul{
-    list-style: none;
-    line-height: 30px;
-}
-.my-con-left{
-    border-right: 2px solid #000;
-    box-sizing: border-box;
-    margin-top: 20px;
-    padding-top: 20px;
-}
-.my-con-left .my-con-panel1{
-    line-height: 25px;
-}
-.my-circle-caret{
-    padding-top: 30px;
-    position: relative;
-}
-.my-circle-caret .my-caret{
-    width: 0;
-    height: 0;
-    border: 13px solid ;
-    border-bottom: 13px solid transparent;
-    border-right: 13px solid transparent;
-
-}
-.my-circle-caret .my-circle{
-    position: absolute;
-    top: 27px;
-    right: -5px;
-    background: #000;
-    border: 1px solid;
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-}
-.my-con-right{
-    margin-top: 20px;
-    padding-top: 20px;
-    line-height: 25px;
-}
-.my-con-right ul li{
-    padding-top: 10px;
-    font-size: 12px;
 }
